--- a/style/main.less
+++ b/style/main.less
@@ -210,6 +210,10 @@ h1{
     margin-top: 5px;
 }
 
+.menu__list li:nth-child(4) a:after {
+    background-color: #92003B;
+}
+
 
 .menu__link:hover::after{
     transform: scaleX(1);
