--- a/style/main.css
+++ b/style/main.css
@@ -573,7 +573,7 @@ body .inverted .header__container {
     transform: rotateY(1deg) scaleX(0.92);
   }
 }
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li.element-show {
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy-hide .loading-lazy__li.element-show {
   opacity: 1;
   transform: translateX(0);
 }
@@ -633,7 +633,10 @@ body .inverted .header__container {
 .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .six {
   grid-area: six;
 }
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li {
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy-hide {
+  display: none;
+}
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy-hide .loading-lazy__li {
   background: url("../img/logo.gif") center / 50px no-repeat;
   box-shadow: 0 0 8px #000000;
   width: 607px;
@@ -643,13 +646,34 @@ body .inverted .header__container {
   transform: translateX(100px);
   transition: 1800ms ;
 }
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li img {
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy-hide .loading-lazy__li img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li:last-child {
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy-hide .loading-lazy__li:last-child {
   margin: 0;
+}
+.loading-lazy__section .loading-lazy__container #load__more-button {
+  text-transform: capitalize;
+  border: 1px solid #222831;
+  color: #222831;
+  font-size: 16px;
+  background-color: #fff;
+  cursor: pointer;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 140px;
+  margin-top: 20px;
+}
+.loading-lazy__section .loading-lazy__container #load__more-button:hover {
+  background-color: #92003B;
+  border-color: #92003B;
+  color: #fff;
 }
 @media only screen and (max-width: 1900px) {
   .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul {
@@ -661,7 +685,7 @@ body .inverted .header__container {
     column-gap: 5px;
     grid-template-areas: "one " "two " "three " "four " "five " "six";
   }
-  .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li {
+  .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy-hide .loading-lazy__li {
     height: 350px;
     width: 100%;
   }
