--- a/style/main.less
+++ b/style/main.less
@@ -783,6 +783,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         margin: 0 auto;
         .loading-lazy__box{
             h2{
+                
                 position: absolute;
                 font-size: 32px;
                 color: white;
@@ -804,7 +805,8 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 color: white;
                 position: absolute;
                 top: 97px;
-                left: 20px;;
+                left: 20px;
+                line-height: 20px;
             }
             
                 .loading-lazy__ul{
@@ -904,8 +906,14 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 
 
     @media only screen and (max-width: 1900px){
+       
+        .loading-lazy__section .loading-lazy__container #load__more-button{
+            margin-top: -1044px;
+            margin-bottom: 15px;
+        }
+
         .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul{
-            padding-top: 60px;
+            padding-top: 80px;
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
