intersection observer+load more button v.1.1

--- a/style/main.less
+++ b/style/main.less
@@ -906,7 +906,11 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 
 
     @media only screen and (max-width: 1900px){
-       
+        
+        footer{
+            margin-top: -5px;
+        }
+
         .loading-lazy__section .loading-lazy__container #load__more-button{
             margin-top: -1044px;
             margin-bottom: 15px;
@@ -1224,6 +1228,7 @@ body._mobile .menu__list > li._active .menu__sub-list{
 
 
 footer{
+    margin-top: -20px;
     background-color: #92003B;
     overflow: hidden;
     .footer__container{
