--- a/style/main.css
+++ b/style/main.css
@@ -682,6 +682,9 @@ body .inverted .header__container {
   color: #fff;
 }
 @media only screen and (max-width: 1900px) {
+  footer {
+    margin-top: -5px;
+  }
   .loading-lazy__section .loading-lazy__container #load__more-button {
     margin-top: -1044px;
     margin-bottom: 15px;
@@ -912,6 +915,7 @@ body._mobile .menu__list > li._active .menu__sub-list {
   color: #ffffff;
 }
 footer {
+  margin-top: -20px;
   background-color: #92003B;
   overflow: hidden;
 }
