--- a/style/main.less
+++ b/style/main.less
@@ -55,6 +55,7 @@ html, body {
 @11:#FCE38A;
 @12:#FF7BE5;
 @13:#92003B;
+@14:#F9ADEA;
 
 html{
     box-sizing: border-box;
@@ -881,11 +882,11 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
             }
 
             #load__more-button{
+                background-color: #FF7BE5;
                 text-transform: capitalize;
-                border:1px solid #222831;
-                color:#222831;
+                border:1px solid #FF7BE5;
+                color: #92003B;
                 font-size: 16px;
-                background-color: #fff;
                 cursor: pointer;
                 margin: 0 auto;
                 text-align: center;
@@ -896,9 +897,9 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 width: 140px;
                 margin-top: -357px;
                 &:hover{
-                    background-color: #92003B;
-                    border-color: #92003B;
-                    color:#fff;
+                    background-color: #F9ADEA;
+                    border-color: #F9ADEA;
+                    color: #92003B;
                 }
             }
         }
