--- a/style/main.less
+++ b/style/main.less
@@ -787,7 +787,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 
                 position: absolute;
                 font-size: 32px;
-                color: white;
+                color: #F9ADEA;
                 top: 0;
                 left: 40%;
                 margin: 20px;
@@ -896,6 +896,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 height: 50px;
                 width: 140px;
                 margin-top: -357px;
+                font-family: 'dm sans';
                 &:hover{
                     background-color: #F9ADEA;
                     border-color: #F9ADEA;
