intersection observer+load more button v.2.0

--- a/style/main.css
+++ b/style/main.css
@@ -611,28 +611,8 @@ body .inverted .header__container {
   padding-top: 90px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  row-gap: 20px;
-  column-gap: 20px;
-  grid-template-areas: "one two three " "four five six ";
-}
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .one {
-  grid-area: one;
-}
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .two {
-  grid-area: two;
-}
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .three {
-  grid-area: three;
-}
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .four {
-  grid-area: four;
-}
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .five {
-  grid-area: five;
-}
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .six {
-  grid-area: six;
+  grid-template-rows: 1fr;
+  gap: 20px;
 }
 .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy-hide {
   display: none;
@@ -674,7 +654,7 @@ body .inverted .header__container {
   align-items: center;
   height: 50px;
   width: 140px;
-  margin-top: -357px;
+  margin-top: 25px;
   font-family: 'dm sans';
 }
 .loading-lazy__section .loading-lazy__container #load__more-button:hover {
@@ -687,17 +667,15 @@ body .inverted .header__container {
     margin-top: -5px;
   }
   .loading-lazy__section .loading-lazy__container #load__more-button {
-    margin-top: -1044px;
+    margin-top: 15px;
     margin-bottom: 15px;
   }
   .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul {
     padding-top: 80px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     row-gap: 5px;
     column-gap: 5px;
-    grid-template-areas: "one " "two " "three " "four " "five " "six";
   }
   .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy-hide .loading-lazy__li {
     height: 350px;
