--- a/style/main.css
+++ b/style/main.css
@@ -1649,6 +1649,7 @@ footer .footer__container .copyright__footer p {
 .load_more_button-container #load-more {
   text-transform: capitalize;
   margin-top: 20px;
+  margin-bottom: 15px;
   display: inline-block;
   padding: 13px 30px;
   border: 1px solid #222831;
