--- a/style/main.less
+++ b/style/main.less
@@ -2197,6 +2197,7 @@ body .footer__container .paragraph__section{
     #load-more{
         text-transform: capitalize;
         margin-top: 20px;
+        margin-bottom: 15px;
         display: inline-block;
         padding:13px 30px;
         border:1px solid #222831;
