--- a/style/main.less
+++ b/style/main.less
@@ -878,9 +878,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 
     @media only screen and (max-width: 1900px){
         
-        footer{
-            margin-top: -5px;
-        }
+    
 
         .loading-lazy__section .loading-lazy__container #load__more-button{
             margin-top: 20px;
@@ -1192,7 +1190,7 @@ body._mobile .menu__list > li._active .menu__sub-list{
 
 
 footer{
-    margin-top: -20px;
+    
     background-color: #92003B;
     overflow: hidden;
     .footer__container{
@@ -1379,6 +1377,9 @@ footer{
 
 
 @media only screen and (max-width: 1900px){
+
+
+
     footer .footer__container{
         padding: 64px 24px;
         grid-template-columns: 1fr;
@@ -2116,7 +2117,7 @@ body .footer__container .paragraph__section{
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
-    padding:25px 20px;
+    padding: 20px 20px;
     .load_more_button-title{
         text-transform: capitalize;
         font-size: 40px;
@@ -2197,7 +2198,7 @@ body .footer__container .paragraph__section{
     #load-more{
         text-transform: capitalize;
         margin-top: 20px;
-        margin-bottom: 15px;
+        
         display: inline-block;
         padding:13px 30px;
         border:1px solid #222831;
@@ -2214,6 +2215,17 @@ body .footer__container .paragraph__section{
 }
 
 @media only screen and (max-width: 500px){
+    .load_more_button-container{
+        padding: 23px 20px;
+    }
+    footer{
+        margin-top: -5px;
+    }
+    .load_more_button-container #load-more{
+
+        margin-bottom: 0;
+    }
+
     .load_more_button-container .load_more_button-title{
         font-size: 25px;
     }
