--- a/style/main.less
+++ b/style/main.less
@@ -777,7 +777,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 
 .loading-lazy__section{
    position: relative;
-    margin-bottom: 20px;
+    
     .loading-lazy__container{
        
         width: 100%;
@@ -827,7 +827,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                         
                             background: url("../img/logo.gif") center / 50px no-repeat;
                             box-shadow: 0 0 8px rgb(0 0 0);
-                            width: 607px;
+                            width: 100%;
                             height: 360px;
                             border: 2px solid @9;
                             opacity: 0;
@@ -864,7 +864,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 align-items: center;
                 height: 50px;
                 width: 140px;
-                margin-top: 25px;
+                margin-top: 20px;
                 font-family: 'dm sans';
                 &:hover{
                     background-color: #F9ADEA;
@@ -898,7 +898,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 width: 100%;
             }
             .loading-lazy__section .loading-lazy__container .loading-lazy__box{
-                padding: 77px 5px 5px 5px;
+                padding: 25px 5px 5px 5px;
             }
             .loading-lazy__section .loading-lazy__container .loading-lazy__box h2{
                 font-size: 22px;
