--- a/style/main.css
+++ b/style/main.css
@@ -579,7 +579,6 @@ body .inverted .header__container {
 }
 .loading-lazy__section {
   position: relative;
-  margin-bottom: 20px;
 }
 .loading-lazy__section .loading-lazy__container {
   width: 100%;
@@ -625,7 +624,7 @@ body .inverted .header__container {
 .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy-hide .loading-lazy__li {
   background: url("../img/logo.gif") center / 50px no-repeat;
   box-shadow: 0 0 8px #000000;
-  width: 607px;
+  width: 100%;
   height: 360px;
   border: 2px solid #F08A5D;
   opacity: 0;
@@ -654,7 +653,7 @@ body .inverted .header__container {
   align-items: center;
   height: 50px;
   width: 140px;
-  margin-top: 25px;
+  margin-top: 20px;
   font-family: 'dm sans';
 }
 .loading-lazy__section .loading-lazy__container #load__more-button:hover {
@@ -679,7 +678,7 @@ body .inverted .header__container {
     width: 100%;
   }
   .loading-lazy__section .loading-lazy__container .loading-lazy__box {
-    padding: 77px 5px 5px 5px;
+    padding: 25px 5px 5px 5px;
   }
   .loading-lazy__section .loading-lazy__container .loading-lazy__box h2 {
     font-size: 22px;
