--- a/style/main.css
+++ b/style/main.css
@@ -1683,3 +1683,101 @@ footer .footer__container .copyright__footer p {
     font-size: 12px;
   }
 }
+.tabs_section-container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 960px;
+  min-width: 720px;
+  width: 100%;
+  margin: 0 auto;
+}
+.tabs_section-container .tabs_section-ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.tabs_section-container .tabs_section-ul .tabs_section-li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 16px 45px;
+  background-color: #EEEEEE;
+  border: 1px solid #d6d4e2;
+  cursor: pointer;
+  color: #F9ADEA;
+}
+.tabs_section-container .tabs_section-ul .tabs_section-li:last-child {
+  padding-right: 47px;
+}
+.tabs_section-container .tabs_section-ul .tabs_section-li:active {
+  background-color: white;
+  border-bottom-color: white;
+  border-left-color: white;
+  border-right-color: white;
+  color: #FF7BE5;
+}
+.tabs_section-container .tabs_section-ul .tabs_section-li:active img {
+  filter: none;
+}
+.tabs_section-container .tabs_section-ul .tabs_section-li:hover {
+  background-color: white;
+  border-bottom-color: white;
+  border-left-color: white;
+  border-right-color: white;
+  color: #FF7BE5;
+}
+.tabs_section-container .tabs_section-ul .tabs_section-li:hover img {
+  filter: none;
+}
+.tabs_section-container .tabs_section-ul .tabs_section-li img {
+  max-height: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 16px;
+  filter: grayscale(85%) opacity(45%);
+}
+.tabs_section-container .tabs_section_buttom-content {
+  border-radius: 0 0 20px 20px;
+  box-shadow: 0 20px 25px -5px rgba(0 0 0 / 0.1), 0 10px 10px -5px rgba(0 0 0 / 0.04), 0 35px 2px -20px rgba(231 231 239 / 1);
+}
+.tabs_section-container .tabs_section_buttom-content .tabs_section_buttom-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 50px;
+  background-color: white;
+  padding: 40px 25px;
+  border-radius: 0 0 20px 20px;
+}
+.tabs_section-container .tabs_section_buttom-content .tabs_section_buttom-box:not(:first-child) {
+  display: none;
+}
+.tabs_section-container .tabs_section_buttom-content .tabs_section_buttom-box img {
+  max-width: 300px;
+  width: 100%;
+  height: 352px;
+}
+.tabs_section-container .tabs_section_buttom-content .tabs_section_buttom-box .text h3 {
+  font-size: 30px;
+  color: #FF7BE5;
+  margin: 16px 0;
+}
+.tabs_section-container .tabs_section_buttom-content .tabs_section_buttom-box .text p {
+  color: #222831;
+  line-height: 1.8;
+}
+.tabs_section-container .tabs_section-ul .tabs_section-li.active {
+  background-color: white;
+  border-bottom-color: white;
+  border-left-color: white;
+  border-right-color: white;
+  color: #FF7BE5;
+}
+.tabs_section-container .tabs_section-ul .tabs_section-li.active img {
+  filter: none;
+}
