--- a/style/main.less
+++ b/style/main.less
@@ -2249,7 +2249,7 @@ body .footer__container .paragraph__section{
 ///////////////////////////////////////tabs_section///////////////////////////////////////////////////
 
 .tabs_section-container{
-    height: 100vh;
+    height: 632px;
     display: flex;
     align-items: center;
     justify-content: center;
