--- a/style/main.css
+++ b/style/main.css
@@ -1684,7 +1684,7 @@ footer .footer__container .copyright__footer p {
   }
 }
 .tabs_section-container {
-  height: 100vh;
+  height: 632px;
   display: flex;
   align-items: center;
   justify-content: center;
