--- a/style/main.less
+++ b/style/main.less
@@ -2273,7 +2273,7 @@ body .footer__container .paragraph__section{
             border: 1px solid @border;
             cursor: pointer;
             color: @14;
-            &:active{
+            &.active{
                 background-color: white;
                 border-bottom-color: white;
                 border-left-color: white;
@@ -2335,16 +2335,7 @@ body .footer__container .paragraph__section{
     }
 }
 
-.tabs_section-container .tabs_section-ul .tabs_section-li.active{
-    background-color: white;
-    border-bottom-color: white;
-    border-left-color: white;
-    border-right-color: white;
-    color: @12;
-    img{
-        filter: none;
-    }
-}
+
 
 
 ///////////////////////////////////////tabs_section///////////////////////////////////////////////////
